<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.ejerciciosficheros.MainActivity">

    <TextView
        android:id="@+id/lblcontenidoAEscribir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contenido a escribir" />

    <EditText
        android:id="@+id/txttexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblcontenidoAEscribir"/>

    <Button
        android:id="@+id/butAnadirFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fichInt"
        android:layout_below="@+id/txttexto"
        android:onClick="interno"/>

    <Button
        android:id="@+id/butAnadirFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fichExt"
        android:layout_below="@+id/txttexto"
        android:layout_toRightOf="@+id/butAnadirFichInt"
        android:onClick="externo"/>

    <Button
        android:id="@+id/butLeerFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butAnadirFichInt"
        android:text="@string/leerInt"
        android:onClick="interno"
        />
    <Button
        android:id="@+id/butLeerFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butAnadirFichExt"
        android:layout_toRightOf="@id/butLeerFichInt"
        android:text="@string/leerExt"
        android:onClick="externo"
        />
    <Button
        android:id="@+id/butLeerRecurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butAnadirFichInt"
        android:layout_toRightOf="@id/butLeerFichExt"
        android:text="@string/leerrecurso"
        />
    <Button
        android:id="@+id/butBorrarFichInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butLeerFichInt"
        android:text="@string/borrarFichInt"
        android:onClick="interno"
        />
    <Button
        android:id="@+id/butBorrarFichExt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butLeerFichExt"
        android:layout_toRightOf="@id/butBorrarFichInt"
        android:text="@string/borrarFichExt"
        android:onClick="externo"
        />

    <TextView
        android:id="@+id/lblContenidoFichero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/butBorrarFichInt"
        android:text="El contenido del fichero es:"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <TextView
        android:id="@+id/lbltextoFichero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lblContenidoFichero"
        android:background="@drawable/fondotextview"
        android:textStyle="bold"
        />

</RelativeLayout>
